lagt till python script + sql

--- a/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
+++ b/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Visual Micro\.FioTemp.vsarduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="dht.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Visual Micro\.XBeeTempAlerter.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
