--- a/XbeeTempAlerter/XbeeTempAlerter.vcxproj
+++ b/XbeeTempAlerter/XbeeTempAlerter.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{266F785C-0124-40CD-8A60-B84FB76320E0}</ProjectGuid>
-    <RootNamespace>FioTemp</RootNamespace>
+    <RootNamespace>XbeeTempAlerter</RootNamespace>
     <ProjectName>XbeeTempAlerter</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -80,7 +80,7 @@
     <ClInclude Include="time.h">
       <FileType>CppCode</FileType>
     </ClInclude>
-    <ClInclude Include="Visual Micro\.FioTemp.vsarduino.h" />
+    <ClInclude Include="Visual Micro\.XBeeTempAlerter.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dht.cpp" />
