--- a/xbee-receiver/package.json
+++ b/xbee-receiver/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "dateformat": "^1.0.11",
-    "mysql": "^2.8.0"
+    "mysql": "^2.9.0",
+    "serialport": "^1.7.4",
+    "xbee-api": "^0.3.12"
   }
 }
