--- a/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
+++ b/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="RadioOperator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScreenHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dht.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RadioOperator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ScreenHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
