--- a/home-automation-API/package.json
+++ b/home-automation-API/package.json
@@ -16,6 +16,7 @@
     "jasmine": "^2.3.2",
     "mocha": "^2.2.5",
     "mockery": "^1.4.0",
+    "moment": "^2.10.6",
     "mysql": "^2.8.0",
     "sinon": "^1.15.4"
   }
