--- a/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
+++ b/XbeeTempAlerter/XbeeTempAlerter.vcxproj.filters
@@ -21,13 +21,13 @@
     <ClInclude Include="time.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Visual Micro\.XBeeTempAlerter.vsarduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RadioOperator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScreenHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="__vm\.XbeeTempAlerter.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
