--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,6 @@ ModelManifest.xml
 */__vm/*
 XbeeTempAlerter/__vm/.XbeeTempAlerter.vsarduino.h
 XbeeTempAlerter/__vm/.XbeeTempAlerter.vsarduino.h
+DBTester/.ntvs_analysis.dat
+*.dat
+xbee-receiver/.ntvs_analysis.dat
