--- a/displayhandler/package.json
+++ b/displayhandler/package.json
@@ -9,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "gulp": "^3.9.1",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-plumber": "^1.1.0",
+    "jasmine": "^2.6.0",
+    "jasmine-console-reporter": "^1.2.7",
+    "jasmine-reporters": "^2.2.1",
+    "jasmine-spec-reporter": "^4.0.0"
+  },
+  "dependencies": {
+    "defaults": "^1.0.3"
   }
 }
