--- a/displayhandler/package.json
+++ b/displayhandler/package.json
@@ -18,6 +18,7 @@
     "jasmine-spec-reporter": "^4.0.0"
   },
   "dependencies": {
+    "adafruit-i2c-lcd": "^1.0.2",
     "defaults": "^1.0.3",
     "mysql": "^2.13.0",
     "promise": "^7.1.1"
