--- a/displayhandler/package.json
+++ b/displayhandler/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "adafruit-i2c-lcd": "^1.0.2",
+    "config": "^1.26.1",
     "defaults": "^1.0.3",
     "mysql": "^2.13.0",
     "promise": "^7.1.1"
