--- a/displayhandler/package.json
+++ b/displayhandler/package.json
@@ -22,6 +22,7 @@
     "config": "^1.26.1",
     "defaults": "^1.0.3",
     "mysql": "^2.13.0",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "socket.io-client": "^2.0.3"
   }
 }
