--- a/displayhandler/package.json
+++ b/displayhandler/package.json
@@ -21,6 +21,8 @@
     "adafruit-i2c-lcd": "^1.0.2",
     "config": "^1.26.1",
     "defaults": "^1.0.3",
+    "huejay": "^1.8.4",
+    "keypress": "^0.2.1",
     "mysql": "^2.13.0",
     "promise": "^7.1.1",
     "socket.io-client": "^2.0.3"
